--- a/django_project/requirements.txt
+++ b/django_project/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.6.0
+boto3==1.16.61
 crispy-bootstrap5==0.7
 Django==4.2
+django-storages==1.11.1
 django-crispy-forms==2.0
 Pillow==9.5.0
 sqlparse==0.4.4
