--- a/django_project/requirements.txt
+++ b/django_project/requirements.txt
@@ -1,11 +1,17 @@
 asgiref==3.6.0
-boto3==1.16.61
+boto3==1.26.118
+botocore==1.29.118
 crispy-bootstrap5==0.7
 Django==4.2
-django-storages==1.11.1
 django-crispy-forms==2.0
+django-storages==1.13.2
+gunicorn==20.1.0
+jmespath==1.0.1
 Pillow==9.5.0
+psycopg2-binary==2.9.6
+python-dateutil==2.8.2
+s3transfer==0.6.0
+six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
-gunicorn==20.1.0
-psycopg2-binary==2.9.6
+urllib3==1.26.15
